# crud-funcionarios

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  security.py
app/dependencies/: auth.py
app/models/: department.py  employee.py
app/routers/: auth.py  employees.py  health.py
app/schemas/: auth.py  employee.py
app/services/: auth_service.py  employee_service.py
